--- a/napschedule/napschedule.css
+++ b/napschedule/napschedule.css
@@ -27,6 +27,9 @@
     font-style: italic;
     color: #413f6b;
     text-align: center;
+    text-shadow: -0.5px -0.5px 0 #fff, 0.5px -0.5px 0 #fff, -0.5px 0.5px 0 #fff, 0.5px 0.5px 0 #fff,
+        1px 1px 5px #565678, 1px 1px 5px #565678;
+    
 }
 .instructions {
     /* paragraphs come with default spacing already */
