--- a/naptrack/naptracker.css
+++ b/naptrack/naptracker.css
@@ -74,6 +74,18 @@ body {
 
 }
 
+.link-container{
+    position: absolute;
+    right: 0px;
+    display: block;
+    padding-right: 10px;
+
+}
+
 .clock-icon{
-    width: 50px;
+    width: 20px;
+}
+
+.link-to-scheduler{
+    display: inline;
 }
