--- a/napschedule/results.css
+++ b/napschedule/results.css
@@ -15,12 +15,11 @@ body{
 }
 
 .title {
-    cursor: pointer;
-    text-decoration: none;
-    font-size: 30px;
-    font-family: "Genos", sans-serif;
-    font-optical-sizing: auto;
+    font-size: 36px;
     font-weight: 600;
+    font-family: "Genos", sans-serif;
+    /* font-optical-sizing: auto; */
+    
     font-style: italic;
     color: #fce9ff;
     text-align: center;
@@ -29,18 +28,20 @@ body{
 }
 
 .command-box{
-    width: 350px;
+    width: 20%;
     display: inline-block;
-    
+    margin-right: 20px;
 }
 
-.wake-box, .bed-box{
+.wake-box, .bed-box, .ideal-box{
     color: #fff;
     background-color: #565678;
     width: 195px;
     height: 50px;
+    margin-top: 20px;
     margin-left: auto;
     margin-right: auto;
+    margin-bottom: 20px;
     border-radius: 5px;
 
     /* Flexbox centering */
@@ -59,22 +60,39 @@ body{
     border-color: #fff;
     border-width: 3px;
     border-radius: 15px;
-    
 }
 
 /* container */
 .ideal-nap-container{
+    font-size: 20px;
+
     display: inline-block;
-    width: 400px;
+    width: 40%;
     background-color:#c4c5ff;
-    color: #fff;
+    color: #413f6b;
     text-align: center;
-    padding-top: 20px;
-    padding-bottom:20px;
+    padding: 20px;
     border-style: solid;
     border-color: #fff;
     border-width: 3px;
     border-radius: 15px;
-    margin-left: 10px;
+    margin-left: 20px;
+    /* added box shadow */
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
     
+}
+
+.ideal-nap{
+    font-size: x-large;
+    font-weight: 600;
+}
+
+.ideal-nap-contents{
+    font-size: large;
+}
+
+
+.bullet-points{
+    text-align: center;
+    list-style-position: inside;
 }
